<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <parent>
      <groupId>org.alfresco</groupId>
      <artifactId>alfresco-share-parent</artifactId>
      <version>25.5.0.11-SNAPSHOT</version>
   </parent>

   <groupId>org.alfresco.tas</groupId>
   <artifactId>share-test</artifactId>
   <packaging>jar</packaging>

   <distributionManagement>
      <snapshotRepository>
         <id>alfresco-internal-snapshots</id>
         <url>
            https://nexus.alfresco.com/nexus/contecheckAlfrescoOneLogoInVersiondialognt/repositories/internal-snapshots/
         </url>
      </snapshotRepository>
      <repository>
         <id>alfresco-internal</id>
         <url>https://nexus.alfresco.com/nexus/content/repositories/internal-releases/</url>
      </repository>
   </distributionManagement>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
      <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
      <maven-remote-resources.version>1.6.0</maven-remote-resources.version>
      <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
      <suiteXmlFile>src/test/resources/test-suites</suiteXmlFile>
      <suite-name />
      <tas.utility.version>5.0.1</tas.utility.version>
      <apache.poi.version>4.1.2</apache.poi.version>
      <java.version>17</java.version>
   </properties>

   <dependencies>
      <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>32.0.1-jre</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>io.github.bonigarcia</groupId>
         <artifactId>webdrivermanager</artifactId>
         <version>5.7.0</version>
      </dependency>
      <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>1.18.34</version>
         <scope>provided</scope>
      </dependency>

      <dependency>
         <groupId>commons-net</groupId>
         <artifactId>commons-net</artifactId>
         <version>3.6</version>
      </dependency>

      <dependency>
         <groupId>org.alfresco.tas</groupId>
         <artifactId>utility</artifactId>
         <version>${tas.utility.version}</version>
          <exclusions>
              <exclusion>
                  <groupId>org.springframework</groupId>
                  <artifactId>spring-web</artifactId>
              </exclusion>
          </exclusions>
      </dependency>

       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-web</artifactId>
           <version>${dependency.spring.version}</version>
       </dependency>

      <dependency>
         <groupId>org.uncommons</groupId>
         <artifactId>reportng</artifactId>
         <version>1.1.2</version>
         <scope>test</scope>
         <exclusions>
            <exclusion>
               <groupId>org.testng</groupId>
               <artifactId>testng</artifactId>
            </exclusion>
            <exclusion>
               <groupId>seleniumhq.selenium</groupId>
               <artifactId>selenium-java</artifactId>
            </exclusion>
         </exclusions>
      </dependency>

      <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
         <version>3.2.2</version>
      </dependency>

      <dependency>
         <groupId>org.alfresco.tas</groupId>
         <artifactId>cmis</artifactId>
         <version>${dependency.alfresco-community-repo.version}</version>
      </dependency>

      <dependency>
         <groupId>org.alfresco.tas</groupId>
         <artifactId>restapi</artifactId>
         <version>${dependency.alfresco-community-repo.version}</version>
          <exclusions>
              <exclusion>
                  <groupId>org.mozilla</groupId>
                  <artifactId>rhino</artifactId>
              </exclusion>
          </exclusions>
      </dependency>

       <dependency>
           <groupId>org.mozilla</groupId>
           <artifactId>rhino</artifactId>
           <version>${dependency.rhino.version}</version>
       </dependency>

      <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j2-impl</artifactId>
      </dependency>

      <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
      </dependency>
       <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
           <version>8.0.33</version>
       </dependency>
       <dependency>
           <groupId>org.xerial</groupId>
           <artifactId>sqlite-jdbc</artifactId>
           <version>3.41.2.2</version>
       </dependency>
       <dependency>
           <groupId>org.testng</groupId>
           <artifactId>testng</artifactId>
           <version>7.7.0</version>
       </dependency>
       <dependency>
           <groupId>org.postgresql</groupId>
           <artifactId>postgresql</artifactId>
           <version>42.2.28.jre7</version>
       </dependency>
       <dependency>
           <groupId>org.jsoup</groupId>
           <artifactId>jsoup</artifactId>
           <version>1.15.3</version>
       </dependency>
       <dependency>
           <groupId>org.freemarker</groupId>
           <artifactId>freemarker</artifactId>
           <version>2.3.30-jakarta-1</version>
       </dependency>
       <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-compress</artifactId>
           <version>1.21</version>
       </dependency>
       <dependency>
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
           <version>2.8.9</version>
       </dependency>
       <dependency>
           <groupId>org.alfresco.test</groupId>
           <artifactId>alfresco-testng</artifactId>
           <version>1.1</version>
           <scope>test</scope>
       </dependency>
   </dependencies>

   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <artifactId>maven-remote-resources-plugin</artifactId>
               <version>${maven-remote-resources.version}</version>
            </plugin>
         </plugins>
      </pluginManagement>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven-compiler-plugin.version}</version>
            <configuration>
               <release>${java.version}</release>
               <showWarnings>true</showWarnings>
               <showDeprecation>true</showDeprecation>
            </configuration>
         </plugin>

         <plugin>
            <artifactId>maven-deploy-plugin</artifactId>
            <version>3.0.0-M1</version>
            <executions>
               <execution>
                  <id>default-deploy</id>
                  <phase>deploy</phase>
                  <goals>
                     <goal>deploy</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M7</version>
            <configuration>
               <redirectTestOutputToFile>false</redirectTestOutputToFile>
               <forkCount>2</forkCount>
               <reuseForks>true</reuseForks>
               <reportNameSuffix>${suite-name}</reportNameSuffix>
              <suiteXmlFiles>
                  <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
               </suiteXmlFiles>
            </configuration>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-remote-resources-plugin</artifactId>
            <configuration>
               <resourceBundles>
                  <resourceBundle>org.alfresco.tas:utility:${tas.utility.version}</resourceBundle>
               </resourceBundles>
            </configuration>
            <executions>
               <execution>
                  <goals>
                     <goal>process</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>
</project>
